# docxreviews2txt

./: .gitignore  README.md  docx_reviews_to_txt.py  lorem_ipsum_review.txt  pyproject.toml  requirements.txt  setup.py
docxreviews2txt/: __init__.py  __main__.py  docxreviews2txt.py
scripts/: docxreviews2txt
src/: __init__.py  docx_reviews_to_txt.py
tests/: docx_reviews_to_txt_test.py  docxreviews2txt_test.py  input_1.docx  input_1_review_expected.txt  input_2.docx  input_2_review_expected.txt  lorem_ipsum.docx  lorem_ipsum_expected.txt  lorem_ipsum_expected.xml  test_docxreviews2txt.py
